--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'haxrcorp'; /*a name to be used later*/
-    src: url('http://domain.com/fonts/font.ttf'); /*URL to font*/
+    src: url('githubsucksbigballs.github.io/HaxrCorp_S8.fon'); /*URL to font*/
 }
 body {
     font-family: haxrcorp;
