--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,12 @@
 @font-face {
-    font-family: 'haxrcorp'; /*a name to be used later*/
-    src: url('githubsucksbigballs.github.io/HaxrCorp_S8.fon'); /*URL to font*/
-}
+    font-family:"HaxrCorp 4089 Cyrillic AltGr Regular";
+    src:url("haxrcorp_4089_cyrillic_altgr.eot?") 
+        format("eot"),url("haxrcorp_4089_cyrillic_altgr.woff") 
+        format("woff"),url("haxrcorp_4089_cyrillic_altgr.ttf") 
+        format("truetype"),url("haxrcorp_4089_cyrillic_altgr.svg#HaxrCorp-4089-Cyrillic-AltGr") 
+        format("svg");font-weight:normal;font-style:normal;}
 body {
-    font-family: haxrcorp;
+    font-family:"HaxrCorp 4089 Cyrillic AltGr Regular" ;
     margin: 60px auto;
     width: 70%;
 }
