--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ body {
     width: 70%;
 }
 nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family: 'Concert One', cursive;
     padding: 0px;
     list-style: none;
     font-weight: bold;
@@ -26,7 +26,7 @@ a:hover {
 }
 h1 {
     font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family: 'Concert One', cursive;
 }
 p {
     font-size: 1.5em;
