--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,14 @@
 @font-face {
     font-family: 'Concert One';
-    src:url('https://fonts.googleapis.com/css?family=Concert+One');
+    src:url('https://github.com/githubsucksbigballs/githubsucksbigballs.github.io/raw/master/haxrcorp_4089_cyrillic_altgr.ttf');
 }
 body {
-    font-family: 'Concert One', cursive;
+    font-family: 'Concert One';
     margin: 60px auto;
     width: 70%;
 }
 nav ul, footer ul {
-    font-family: 'Concert One', cursive;
+    font-family: 'Concert One';
     padding: 0px;
     list-style: none;
     font-weight: bold;
@@ -26,7 +26,7 @@ a:hover {
 }
 h1 {
     font-size: 3em;
-    font-family: 'Concert One', cursive;
+    font-family: 'Concert One';
 }
 p {
     font-size: 1.5em;
