--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
     src:url('https://github.com/githubsucksbigballs/githubsucksbigballs.github.io/raw/master/haxrcorp_4089_cyrillic_altgr.ttf');
 }
 body {
+    font-size: 12px;
     font-family: 'Concert One';
     margin: 60px auto;
     width: 70%;
@@ -25,7 +26,7 @@ a:hover {
     text-decoration: underline;
 }
 h1 {
-    font-size: 3em;
+    font-size: 12px;
     font-family: 'Concert One';
 }
 p {
@@ -35,12 +36,12 @@ p {
 }
 footer {
     border-top: 1px solid #d5d5d5;
-    font-size: .8em;
+    font-size: 12px;
 }
 
 ul.posts { 
     margin: 20px auto 40px; 
-    font-size: 1.5em;
+    font-size: 12px;
 }
 
 ul.posts li {
