--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: 'Concert One';
-    src:url('https://github.com/githubsucksbigballs/githubsucksbigballs.github.io/raw/master/haxrcorp_4089_cyrillic_altgr.ttf');
+    font-family: "Concert One";
+    src:url('https://raw.githubusercontent.com/githubsucksbigballs/githubsucksbigballs.github.io/master/haxrcorp_4089_cyrillic_altgr.ttf');
 }
 body {
     font-size: 12px;
