--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: #999;
+    color: #90B8F3;
 }
 a:hover {
     text-decoration: underline;
@@ -37,12 +37,12 @@ p {
 }
 footer {
     border-top: 1px solid #d5d5d5;
-    font-size: 12px;
+    font-size: 24px;
 }
 
 ul.posts { 
     margin: 20px auto 40px; 
-    font-size: 12px;
+    font-size: 24px;
 }
 
 ul.posts li {
