--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,6 @@ nav ul, footer ul {
     font-family: 'Haxrcorp';
     padding: 0px;
     list-style: none;
-    font-weight: bold;
 }
 nav ul li, footer ul li {
     display: inline;
@@ -24,7 +23,7 @@ a {
     color: #90B8F3;
 }
 a:hover {
-    text-decoration: underline;
+    text-decoration-color: #7BE5D1;
 }
 h1 {
     font-size: 1em;
@@ -33,7 +32,7 @@ h1 {
 p {
     font-size: 1.5em;
     line-height: 1.4em;
-    color: #333;
+    color: #828282;
 }
 footer {
     border-top: 1px solid #d5d5d5;
